--- a/src/app/plan-details/plan-details.component.html
+++ b/src/app/plan-details/plan-details.component.html
@@ -6,7 +6,7 @@
     <div class='card-body'>
         <div class='row' *ngFor='let meal of mealPlan'>
             <div class='col'>Meal: {{meal.name}}</div>
-            <div class='col' *ngIf='meal.tag'>({{meal.tag}})</div>
+            <!-- <div class='col' *ngIf='meal.tag'>({{meal.tag}})</div> -->
             <div class='col'>{{meal.calories | number:'1.0-0'}} kcal</div>
             <div class='col'>{{meal.carbs | number:'1.0-0'}}g carbs</div>
             <div class='col'>{{meal.protein | number:'1.0-0'}}g protein</div>
